src/test/error/macro6.lns
macro _hoge() {
   {
      __var[ "a" ] = 1; // error
   }
}
